[WFLY-2427] Convert the standalone test server to use the launcher API.